<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/ic_nav_home"/>

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/ic_nav_favorites"/>

    <item
        android:id="@+id/nav_downloads"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:title="@string/ic_nav_downloads"/>

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/ic_nav_history"/>

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/ic_nav_settings"/>
</menu>