<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />


    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:hint="@string/edt_senha"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <CheckBox
        android:id="@+id/ckb_exibir_senha_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ckb_exibir_senha_login"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:layout_marginRight="70dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/cinza"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/cinzaclaro"
        android:text="@string/btn_registrar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminateTint="@color/white"
        android:visibility="invisible" />






</LinearLayout>